# PythonWeb_mod_7

./: README.md  connection.py  models.py  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2c58be2a640b_init.py  c195987437c4_init.py
seeds/: init.py
